# medicalOffice

./: CMakeLists.txt  README.md  builder.c  builder.h  cfile.c  cfile.h  consultation.c  consultation.h  login.c  login.h  main.c  patient.c  patient.h  payment.c  payment.h  payment_management.c  payment_management.h  rendezvous.c  rendezvous.h  utils.c  utils.h
